formatting of the dates

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <h1>Presentations</h1>
     <p>
       <a href="base-201111/">Fruit: Functional Reactive UI Thing</a><br />
-      Bay Area Scala Enthusiasts, Mountain View, Nov 14, 2011
+      November 14, 2011, Bay Area Scala Enthusiasts, Mountain View
   </body>
 </html>
