--- a/base-201111/index.html
+++ b/base-201111/index.html
@@ -26,8 +26,7 @@
   <h1>Fruit</h1>
   <h2>Functional Reactive UI Thing</h2>
   <p class="location">Bay Area Scala Enthusiasts, November 2011
-  <p class="author"><a href="http://earldouglas.com/">James Douglas</a> 
-  <br><a href="http://twitter.com/#!/jearldouglas">@jearldouglas</a></p> 
+  <p class="author"><a href="http://earldouglas.com/">James Earl Douglas</a> 
 </div>
 <div class="slide">
   <h1>Example</h1>
